# shaman-qt

./: BUILD_INSTRUCTIONS  CMakeLists.txt  README.md  USE_INSTRUCTIONS
icons/: icon.qrc
src/: main.cpp  shaman.cpp  shaman.h  statusicon.cpp  statusicon.h
